fixing mgP2 header spacing

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2295,7 +2295,7 @@ font-weight: 600;
   width: 100vw;
   height: 30vw;
   border: solid;
-  margin-top: -200px;
+  margin-top: -20vh;
   display: flex;
   justify-content: center; 
   align-items: center;
